[package]
name = "schorle"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
axum = "0.8.4"
futures = "0.3.31"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39", "experimental-async"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
axum-server = { version = "0.7.2", features = ["tls-rustls", "tokio-rustls"] }
dashmap = "6.1.0"
anyhow = "1.0.99"
thiserror = "2.0.16"
reqwest = { version = "0.12.23", features = ["rustls-tls", "stream", "cookies", "deflate", "gzip", "brotli", "zstd", "charset"] }
reqwest-websocket = "0.5.1"
url = "2.5.7"
bytes = "1.10.1"
futures-util = "0.3.31"
