[project]
name = "schorle"
version = "0.1.0"
description = "Schorle is a framework for building powerful data-driven applications."
readme = "README.md"
authors = [
    { name = "renardeinside", email = "polarpersonal@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "msgpack>=1.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tomlkit>=0.13.3",
    "typer>=0.17.4",
    "watchfiles>=1.1.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project.scripts]
slx = "schorle.__main__:main"

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "msgpack-types>=0.5.0",
    "mypy>=1.17.1",
    "pyo3-stubgen>=0.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "types-requests>=2.32.4.20250809",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "packages/aurora",
]
