[project]
name = "aurora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "renardeinside", email = "polarpersonal@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "schorle",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
aurora = "aurora:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
schorle = { path = "../../", editable = true }
